--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@google/genai": "^1.24.0",
     "@tavily/core": "^0.5.12",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "typescript": "^5.9.3"
   },
